--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "storybook-builder-vite": "^0.1.17",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
@@ -28,6 +29,7 @@
     "@vue/tsconfig": "^0.1.3",
     "babel-loader": "^8.2.3",
     "eslint": "^8.5.0",
+    "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
     "typescript": "~4.5.5",
